# abicus

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  LICENCE.md  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  test_superscript.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: merge-dependabot-prs.yml  prod-release.yml  ref-debug.yaml  release-dev.yaml  release-prod.yaml  release.yaml  test.yml
playwright/: buttons.spec.ts  factorial.spec.ts  keyboard.spec.ts  memory.spec.ts  selection.spec.ts
public/: site.webmanifest
src/: _clsx-jsx.d.ts  _vite-env.d.ts  app.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/calculator/: evaluator.spec.ts  evaluator.ts  index.ts  parser.spec.ts  parser.ts  tokeniser.spec.ts  tokeniser.ts
src/calculator/internal/: evaluator.spec.ts  evaluator.ts  parser.spec.ts  parser.ts  tokeniser.spec.ts  tokeniser.ts
src/components/keypad/: index.tsx  key.tsx  special-key-labels.tsx
src/components/screen/: calc-buffer-input.tsx  error-icon.tsx  index.tsx  input.tsx  rad-deg-toggle.tsx  result.tsx
src/error-boundary/: constants.ts  index.tsx
src/state/: index.tsx  internal-buffer.ts  internal-memory.ts
src/utils/: format-result.spec.ts  format-result.ts  prettify-expression.spec.ts  prettify-expression.ts  tests.ts  tokens.ts
