[package]
name = "abicus"
version = "0.0.0"
description = "A Simple Scientific Calculator"
authors = ["Matriculation Examination Board, Finland"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = ["shell-open"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
